
        BOOKKEEPER-454: hedwig c++ tester script assumes sh is bash (ivank)

        BOOKKEEPER-470: Possible infinite loop in simple.SubscribeReconnectCallback (sijie via ivank)

        BOOKKEEPER-55: SubscribeReconnectRetryTask might retry subscription endlessly when another subscription is already successfully created previously (sijie via ivank)

      hedwig-server:

        BOOKKEEPER-302: No more messages delivered when hub server scans messages over two ledgers. (sijie via ivank)

        BOOKKEEPER-330: System.currentTimeMillis usage in Hedwig (uma via sijie)

        BOOKKEEPER-343: Failed to register hedwig JMX beans in test cases (sijie via ivank)

        BOOKKEEPER-259: Create a topic manager using versioned write for leader election (sijie via ivank)

        BOOKKEEPER-191: Hub server should change ledger to write, so consumed messages have chance to be garbage collected. (sijie via ivank)

        BOOKKEEPER-439: No more messages delivered after deleted consumed ledgers. (sijie via ivank)

        BOOKKEEPER-440: Make Write/Delete SubscriptionData Restricted to Version (Fangmin Lv via ivank)

        BOOKKEEPER-482: Precommit is reporting findbugs errors in trunk (ivank via sijie)

        BOOKKEEPER-442: Failed to deliver messages due to inconsistency between SubscriptionState and LedgerRanges. (jiannan via ivank)

        BOOKKEEPER-461: Delivery throughput degrades when there are lots of publishers w/ high traffic. (sijie via ivank)

	BOOKKEEPER-458:  Annoy BKReadException error when changing ledger. (jiannan via fpj)

        BOOKKEEPER-507: Race condition happens if closeSubscription and subscribe happened at the same time (in multiplexed client). (sijie via ivank)

	BOOKKEEPER-532: AbstractSubscriptionManager#AcquireOp read subscriptions every time even it already owned the topic. (sijie via fpj)

        BOOKKEEPER-531: Cache thread should wait until old entries are collected (sijie via ivank)
