@@ -18,6 +18,7 @@
 package org.apache.hedwig.client.netty.impl.simple;
 
 import java.net.InetSocketAddress;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
 
@@ -28,6 +29,7 @@ import org.jboss.netty.channel.ChannelFactory;
 import org.jboss.netty.channel.ChannelFuture;
 import org.jboss.netty.channel.ChannelFutureListener;
 
+import org.apache.hedwig.exceptions.PubSubException;
 import org.apache.hedwig.client.api.MessageHandler;
 import org.apache.hedwig.client.conf.ClientConfiguration;
 import org.apache.hedwig.client.data.TopicSubscriber;
@@ -44,9 +46,9 @@ import org.apache.hedwig.client.netty.impl.HChannelHandler;
 import org.apache.hedwig.client.netty.impl.HChannelImpl;
 import org.apache.hedwig.exceptions.PubSubException.ClientNotSubscribedException;
 import org.apache.hedwig.exceptions.PubSubException.ServiceDownException;
-import org.apache.hedwig.filter.ClientMessageFilter;
+import org.apache.hedwig.exceptions.PubSubException.TopicBusyException;
 import org.apache.hedwig.protocol.PubSubProtocol.ResponseBody;
-import org.apache.hedwig.protoextensions.SubscriptionStateUtils;
+import org.apache.hedwig.protocol.PubSubProtocol.OperationType;
 import org.apache.hedwig.util.Callback;
 import org.apache.hedwig.util.Either;
 import static org.apache.hedwig.util.VarArgs.va;
@@ -80,6 +82,46 @@ public class SimpleHChannelManager extends AbstractHChannelManager {
         topicSubscriber2Channel = new CleanupChannelMap<TopicSubscriber>();
         this.subscriptionChannelPipelineFactory =
             new SimpleSubscriptionChannelPipelineFactory(cfg, this);
+    }
+
+    @Override
+    public void submitOp(final PubSubData pubSubData) {
+        /**
+         * In the simple hchannel implementation that if a client closes a subscription
+         * and tries to attach to it immediately, it could get a TOPIC_BUSY response. This
+         * is because, a subscription is closed simply by closing the channel, and the hub
+         * side may not have been notified of the channel disconnection event by the time
+         * the new subscription request comes in. To solve this, retry up to 5 times.
+         * {@link https://issues.apache.org/jira/browse/BOOKKEEPER-513}
+         */
+        if (OperationType.SUBSCRIBE.equals(pubSubData.operationType)) {
+            final Callback<ResponseBody> origCb = pubSubData.getCallback();
+            final AtomicInteger retries = new AtomicInteger(5);
+            final Callback<ResponseBody> wrapperCb
+                = new Callback<ResponseBody>() {
+                @Override
+                public void operationFinished(Object ctx,
+                                              ResponseBody resultOfOperation) {
+                    origCb.operationFinished(ctx, resultOfOperation);
+                }
+
+                @Override
+                public void operationFailed(Object ctx, PubSubException exception) {
+                    if (exception instanceof ServiceDownException
+                        && exception.getCause() instanceof TopicBusyException
+                        && retries.decrementAndGet() > 0) {
+                        logger.warn("TOPIC_DOWN from server using simple channel scheme."
+                                    + "This could be due to the channel disconnection from a close"
+                                    + " not having been triggered on the server side. Retrying");
+                        SimpleHChannelManager.super.submitOp(pubSubData);
+                        return;
+                    }
+                    origCb.operationFailed(ctx, exception);
+                }
+            };
+            pubSubData.setCallback(wrapperCb);
+        }
+        super.submitOp(pubSubData);
     }
 
     @Override
