@@ -200,6 +200,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-55: SubscribeReconnectRetryTask might retry subscription endlessly when another subscription is already successfully created previously (sijie via ivank)
 
+        BOOKKEEPER-513: TestMessageFilter fails periodically (ivank)
+
       hedwig-server:
 
         BOOKKEEPER-302: No more messages delivered when hub server scans messages over two ledgers. (sijie via ivank)
